@@ -32,5 +32,10 @@ Module::Build->new(
 		'XML::LibXML' => 0,
 	},
 	sign => 1,
+    meta_merge => {
+        resources => {
+            repository => 'https://github.com/derf/Travel-Status-DE-IRIS'
+        }
+    },
 
 )->create_build_script();
