@@ -1,3 +1,7 @@
+Travel::Status::DE::IRIS 1.02 - ??? May ?? 2015
+
+    * Added github repo to dist metadata and the doc
+
 Travel::Status::DE::IRIS 1.01 - Fri May 15 2015
 
     * IRIS->new: Fix default lwp_options value (was documented, but not used)
